include/codata_constants_2018.h

ADD_IMPORT extern const double HERTZ_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_HERTZ_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double HERTZ_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_HERTZ_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double HERTZ_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_HERTZ_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double HERTZ_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_HERTZ_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018;/**< Hz */
ADD_IMPORT extern const double U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018;/**< Hz */
ADD_IMPORT extern const double INVERSE_FINE_STRUCTURE_CONSTANT_2018;/**<  */
ADD_IMPORT extern const double U_INVERSE_FINE_STRUCTURE_CONSTANT_2018;/**<  */
ADD_IMPORT extern const double INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double INVERSE_METER_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_INVERSE_METER_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double INVERSE_METER_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_INVERSE_METER_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double INVERSE_METER_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_INVERSE_METER_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double INVERSE_METER_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_INVERSE_METER_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double INVERSE_METER_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_INVERSE_METER_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double INVERSE_OF_CONDUCTANCE_QUANTUM_2018;/**< ohm */
ADD_IMPORT extern const double U_INVERSE_OF_CONDUCTANCE_QUANTUM_2018;/**< ohm */
ADD_IMPORT extern const double JOSEPHSON_CONSTANT_2018;/**< Hz V^-1 */
ADD_IMPORT extern const double U_JOSEPHSON_CONSTANT_2018;/**< Hz V^-1 */
ADD_IMPORT extern const double JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double JOULE_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_JOULE_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double JOULE_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_JOULE_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double JOULE_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_JOULE_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double JOULE_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_JOULE_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double JOULE_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_JOULE_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double JOULE_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_JOULE_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double KELVIN_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_KELVIN_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double KELVIN_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_KELVIN_HERTZ_RELATIONSHIP_2018;/**< Hz */