src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="HERTZ_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_152_2018=HERTZ_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_152_2018=U_HERTZ_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_JOULE_RELATIONSHIP_2018=6.62607015d-34 !! J
real(real64), parameter, public :: U_HERTZ_JOULE_RELATIONSHIP_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="HERTZ_JOULE_RELATIONSHIP_2018"):: &
capi_153_2018=HERTZ_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_JOULE_RELATIONSHIP_2018") :: &
capi_U_153_2018=U_HERTZ_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_KELVIN_RELATIONSHIP_2018=4.799243073d-11 !! K
real(real64), parameter, public :: U_HERTZ_KELVIN_RELATIONSHIP_2018=0.0d0 !! K

real(c_double), protected, public, bind(C,name="HERTZ_KELVIN_RELATIONSHIP_2018"):: &
capi_154_2018=HERTZ_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_KELVIN_RELATIONSHIP_2018") :: &
capi_U_154_2018=U_HERTZ_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_KILOGRAM_RELATIONSHIP_2018=7.372497323d-51 !! kg
real(real64), parameter, public :: U_HERTZ_KILOGRAM_RELATIONSHIP_2018=0.0d0 !! kg

real(c_double), protected, public, bind(C,name="HERTZ_KILOGRAM_RELATIONSHIP_2018"):: &
capi_155_2018=HERTZ_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_155_2018=U_HERTZ_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018=9192631770d0 !! Hz
real(real64), parameter, public :: U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018=0.0d0 !! Hz

real(c_double), protected, public, bind(C,name="HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018"):: &
capi_156_2018=HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018
real(c_double), protected, public, bind(C,name="U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018") :: &
capi_U_156_2018=U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133_2018

real(real64), parameter, public :: INVERSE_FINE_STRUCTURE_CONSTANT_2018=137.035999084d0 !! 
real(real64), parameter, public :: U_INVERSE_FINE_STRUCTURE_CONSTANT_2018=0.000000021d0 !! 

real(c_double), protected, public, bind(C,name="INVERSE_FINE_STRUCTURE_CONSTANT_2018"):: &
capi_157_2018=INVERSE_FINE_STRUCTURE_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_FINE_STRUCTURE_CONSTANT_2018") :: &
capi_U_157_2018=U_INVERSE_FINE_STRUCTURE_CONSTANT_2018

real(real64), parameter, public :: INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=1.33102505010d-15 !! u
real(real64), parameter, public :: U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.00000000040d-15 !! u

real(c_double), protected, public, bind(C,name="INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_158_2018=INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_158_2018=U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018=1.239841984d-6 !! eV
real(real64), parameter, public :: U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018=0.0d0 !! eV

real(c_double), protected, public, bind(C,name="INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_159_2018=INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_159_2018=U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_HARTREE_RELATIONSHIP_2018=4.5563352529120d-8 !! E_h
real(real64), parameter, public :: U_INVERSE_METER_HARTREE_RELATIONSHIP_2018=0.0000000000088d-8 !! E_h

real(c_double), protected, public, bind(C,name="INVERSE_METER_HARTREE_RELATIONSHIP_2018"):: &
capi_160_2018=INVERSE_METER_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_HARTREE_RELATIONSHIP_2018") :: &
capi_U_160_2018=U_INVERSE_METER_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_HERTZ_RELATIONSHIP_2018=299792458d0 !! Hz
real(real64), parameter, public :: U_INVERSE_METER_HERTZ_RELATIONSHIP_2018=0.0d0 !! Hz

real(c_double), protected, public, bind(C,name="INVERSE_METER_HERTZ_RELATIONSHIP_2018"):: &
capi_161_2018=INVERSE_METER_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_HERTZ_RELATIONSHIP_2018") :: &
capi_U_161_2018=U_INVERSE_METER_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_JOULE_RELATIONSHIP_2018=1.986445857d-25 !! J
real(real64), parameter, public :: U_INVERSE_METER_JOULE_RELATIONSHIP_2018=0.0d0 !! J

real(c_double), protected, public, bind(C,name="INVERSE_METER_JOULE_RELATIONSHIP_2018"):: &
capi_162_2018=INVERSE_METER_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_JOULE_RELATIONSHIP_2018") :: &
capi_U_162_2018=U_INVERSE_METER_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_KELVIN_RELATIONSHIP_2018=1.438776877d-2 !! K
real(real64), parameter, public :: U_INVERSE_METER_KELVIN_RELATIONSHIP_2018=0.0d0 !! K

real(c_double), protected, public, bind(C,name="INVERSE_METER_KELVIN_RELATIONSHIP_2018"):: &
capi_163_2018=INVERSE_METER_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_KELVIN_RELATIONSHIP_2018") :: &
capi_U_163_2018=U_INVERSE_METER_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_METER_KILOGRAM_RELATIONSHIP_2018=2.210219094d-42 !! kg
real(real64), parameter, public :: U_INVERSE_METER_KILOGRAM_RELATIONSHIP_2018=0.0d0 !! kg

real(c_double), protected, public, bind(C,name="INVERSE_METER_KILOGRAM_RELATIONSHIP_2018"):: &
capi_164_2018=INVERSE_METER_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_METER_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_164_2018=U_INVERSE_METER_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: INVERSE_OF_CONDUCTANCE_QUANTUM_2018=12906.40372d0 !! ohm
real(real64), parameter, public :: U_INVERSE_OF_CONDUCTANCE_QUANTUM_2018=0.0d0 !! ohm

real(c_double), protected, public, bind(C,name="INVERSE_OF_CONDUCTANCE_QUANTUM_2018"):: &
capi_165_2018=INVERSE_OF_CONDUCTANCE_QUANTUM_2018
real(c_double), protected, public, bind(C,name="U_INVERSE_OF_CONDUCTANCE_QUANTUM_2018") :: &
capi_U_165_2018=U_INVERSE_OF_CONDUCTANCE_QUANTUM_2018

real(real64), parameter, public :: JOSEPHSON_CONSTANT_2018=483597.8484d9 !! Hz V^-1
real(real64), parameter, public :: U_JOSEPHSON_CONSTANT_2018=0.0d0 !! Hz V^-1

real(c_double), protected, public, bind(C,name="JOSEPHSON_CONSTANT_2018"):: &
capi_166_2018=JOSEPHSON_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_JOSEPHSON_CONSTANT_2018") :: &
capi_U_166_2018=U_JOSEPHSON_CONSTANT_2018

real(real64), parameter, public :: JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=6.7005352565d9 !! u
real(real64), parameter, public :: U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.0000000020d9 !! u

real(c_double), protected, public, bind(C,name="JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_167_2018=JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_167_2018=U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_ELECTRON_VOLT_RELATIONSHIP_2018=6.241509074d18 !! eV
real(real64), parameter, public :: U_JOULE_ELECTRON_VOLT_RELATIONSHIP_2018=0.0d0 !! eV

real(c_double), protected, public, bind(C,name="JOULE_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_168_2018=JOULE_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_168_2018=U_JOULE_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_HARTREE_RELATIONSHIP_2018=2.2937122783963d17 !! E_h
real(real64), parameter, public :: U_JOULE_HARTREE_RELATIONSHIP_2018=0.0000000000045d17 !! E_h

real(c_double), protected, public, bind(C,name="JOULE_HARTREE_RELATIONSHIP_2018"):: &
capi_169_2018=JOULE_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_HARTREE_RELATIONSHIP_2018") :: &
capi_U_169_2018=U_JOULE_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_HERTZ_RELATIONSHIP_2018=1.509190179d33 !! Hz
real(real64), parameter, public :: U_JOULE_HERTZ_RELATIONSHIP_2018=0.0d0 !! Hz

real(c_double), protected, public, bind(C,name="JOULE_HERTZ_RELATIONSHIP_2018"):: &
capi_170_2018=JOULE_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_HERTZ_RELATIONSHIP_2018") :: &
capi_U_170_2018=U_JOULE_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_INVERSE_METER_RELATIONSHIP_2018=5.034116567d24 !! m^-1
real(real64), parameter, public :: U_JOULE_INVERSE_METER_RELATIONSHIP_2018=0.0d0 !! m^-1

real(c_double), protected, public, bind(C,name="JOULE_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_171_2018=JOULE_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_171_2018=U_JOULE_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_KELVIN_RELATIONSHIP_2018=7.242970516d22 !! K
real(real64), parameter, public :: U_JOULE_KELVIN_RELATIONSHIP_2018=0.0d0 !! K

real(c_double), protected, public, bind(C,name="JOULE_KELVIN_RELATIONSHIP_2018"):: &
capi_172_2018=JOULE_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_KELVIN_RELATIONSHIP_2018") :: &
capi_U_172_2018=U_JOULE_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: JOULE_KILOGRAM_RELATIONSHIP_2018=1.112650056d-17 !! kg
real(real64), parameter, public :: U_JOULE_KILOGRAM_RELATIONSHIP_2018=0.0d0 !! kg

real(c_double), protected, public, bind(C,name="JOULE_KILOGRAM_RELATIONSHIP_2018"):: &
capi_173_2018=JOULE_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_JOULE_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_173_2018=U_JOULE_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=9.2510873014d-14 !! u
real(real64), parameter, public :: U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.0000000028d-14 !! u

real(c_double), protected, public, bind(C,name="KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_174_2018=KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_174_2018=U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018=8.617333262d-5 !! eV
real(real64), parameter, public :: U_KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018=0.0d0 !! eV

real(c_double), protected, public, bind(C,name="KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_175_2018=KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_175_2018=U_KELVIN_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_HARTREE_RELATIONSHIP_2018=3.1668115634556d-6 !! E_h
real(real64), parameter, public :: U_KELVIN_HARTREE_RELATIONSHIP_2018=0.0000000000061d-6 !! E_h

real(c_double), protected, public, bind(C,name="KELVIN_HARTREE_RELATIONSHIP_2018"):: &
capi_176_2018=KELVIN_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_KELVIN_HARTREE_RELATIONSHIP_2018") :: &
capi_U_176_2018=U_KELVIN_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: KELVIN_HERTZ_RELATIONSHIP_2018=2.083661912d10 !! Hz
real(real64), parameter, public :: U_KELVIN_HERTZ_RELATIONSHIP_2018=0.0d0 !! Hz
